# scala_lexer

./: CMakeLists.txt  lexer.l  test.txt
